style(responsive):correct nav links padding on mobile by setting padding

--- a/src/index.css
+++ b/src/index.css
@@ -269,6 +269,7 @@ footer{
         flex-direction: column;
         align-items: flex-start;
         gap: 0.5;
+        padding: 10px 0 4px 0;
     }
 }
 
